--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "app": "nodemon app.js"
+    "app": "nodemon app.js",
+    "backend-build": "npm install",
+"frontend-build": "cd ../frontend && npm intall && npm build"
   },
   "author": "",
   "license": "MIT",
