--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,10 +4,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "app": "nodemon app.js",
     "backend-build": "npm install",
-"frontend-build": "cd ../frontend && npm run dev"
+    "frontend-build": "cd ../frontend && npm run dev"
   },
   "author": "",
   "license": "MIT",
@@ -20,6 +20,7 @@
     "mongoose": "^8.5.2"
   },
   "devDependencies": {
-    "nodeman": "^1.1.2"
+    "nodeman": "^1.1.2",
+    "nodemon": "^3.1.4"
   }
 }
