--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "app": "nodemon app.js",
     "backend-build": "npm install",
     "frontend-build": "cd ../frontend && npm run dev"
@@ -22,5 +22,6 @@
   "devDependencies": {
     "nodeman": "^1.1.2",
     "nodemon": "^3.1.4"
+    
   }
 }
